--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/mocha": "^9.0.0",
     "@types/node": "^14.14.2",
     "@types/sinon": "10.0.6",
+    "@types/uuid": "^8.3.1",
     "chai": "^4.3.4",
     "mocha": "^9.1.0",
     "nyc": "^15.1.0",
@@ -31,7 +32,9 @@
     "cors": "~2.8.5",
     "express": "~4.17.1",
     "inversify": "~6.0.1",
+    "json-repo": "^1.2.4",
     "reflect-metadata": "~0.1.13",
+    "uuid": "^8.3.2",
     "winston": "^3.3.3"
   }
 }
